Tue Dec 22 22:15:08 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/io/console/io-console.gemspec: bump up to 0.4.4.

Tue Dec 22 22:11:06 2015  SHIBATA Hiroshi  <hsbt@ruby-lang.org>

	* NEWS: Added news entry of Psych 2.0.17

Tue Dec 22 22:09:01 2015  SHIBATA Hiroshi  <hsbt@ruby-lang.org>

	* NEWS: Added news entry of RDoc 4.2.1

Tue Dec 22 21:20:00 2015  Kenta Murata  <mrkn@mrkn.jp>

	* ext/bigdecimal/bigdecimal.gemspec: bump version to 1.2.8.

Tue Dec 22 21:08:05 2015  SHIBATA Hiroshi  <hsbt@ruby-lang.org>

	* lib/rdoc.rb: bump version to 4.2.1. It contains following fixes.
	  https://github.com/rdoc/rdoc/pull/340
	  https://github.com/rdoc/rdoc/pull/341
	  https://github.com/rdoc/rdoc/pull/367
	  https://github.com/rdoc/rdoc/pull/368
	* lib/rdoc/*: ditto.
	* test/rdoc/*: ditto.

Tue Dec 22 20:25:33 2015  SHIBATA Hiroshi  <hsbt@ruby-lang.org>

	* ext/psych/lib/psych.rb: bump version to 2.0.17
	* ext/psych/psych.gemspec: ditto.

Tue Dec 22 20:14:47 2015  Koichi Sasada  <ko1@atdot.net>

	* vm_insnhelper.c: move vm_callee_setup_block_arg() (and related
	  functions) to the latter location.
	  This moving recovers performance a little.
	  [Bug #11829]

Tue Dec 22 15:21:11 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* string.c (str_compat_and_valid): as scrub does nothing for dummy
	  encoding string now, incompatible encoding is not a matter.

Tue Dec 22 14:31:28 2015  Toru Iwase  <tietew@tietew.net>

	* ext/cgi/escape/escape.c (optimized_escape_html): CGI.escapeHTML
	  should return unfrozen new string.
	  [ruby-core:72426] [Bug #11858]

Tue Dec 22 05:39:58 2015  Takashi Kokubun  <takashikkbn@gmail.com>

	* ext/cgi/escape/escape.c (preserve_original_state): Preserve
	  original state for tainted and frozen.  [Fix GH-1166]
	  [ruby-dev:49451] [Bug #11855]

Tue Dec 22 03:57:20 2015  Eric Wong  <e@80x24.org>

	* ext/socket/init.c (rsock_init_sock): check FD after validating
	* test/socket/test_basicsocket.rb (test_for_fd): new
	  [ruby-core:72418] [Bug #11854]
