@@ -149,5 +149,12 @@ End
       }
       assert(exist, 'Bug #11360')
     End
+
+    klass = Class.new
+    instance = klass.new
+    sclass = instance.singleton_class
+    meta = klass.singleton_class
+    assert_kind_of(meta, sclass)
+    assert_include(ObjectSpace.each_object(meta).to_a, sclass)
   end
 end
